--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: Run tests
+name: Tests
 on:
   push:
   pull_request:
@@ -13,7 +13,7 @@ env:
 
 jobs:
   build:
-    name: 'Run tests'
+    name: 'Tests'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
