--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
-conllu
-hypothesis
-importlib-resources
-pytest
-pytest-cov
-pytest-mock
-regex
+conllu==6.0.0
+importlib_resources==6.5.2
+regex==2024.11.6
