--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=61.0.0", "wheel"]
+requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -9,12 +9,19 @@ description = "A set of convenience tools for Natural Language Processing work w
 readme = "README.md"
 authors = [{ name = "Gabe Pizzorno" }]
 license = { file = "LICENSE" }
+keywords = ["latin", "nlp", "utilities", "conllu", ]
 classifiers = [
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Operating System :: OS Independent",
 ]
-keywords = ["latin", "nlp", "utilities", "conllu", ]
 dependencies = [
     "conllu >= 6.0.0",
     "importlib_resources >= 6.5.2",
@@ -26,7 +33,7 @@ requires-python = ">=3.9"
 dev = ["factory_boy", "hypothesis", "mypy", "pytest", "pytest-cov", "pytest-mock"]
 
 [project.urls]
-Homepage = "https://github.com/gabep/latin-nlp-utilities"
+Homepage = "https://github.com/gabep/latin-nlp-utilities/"
 
 [tool.setuptools.package-data]
 "latin_nlp_utilities" = ["data/*.*"]
@@ -109,13 +116,15 @@ section-order = [
   "local-folder",
 ]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["E402"] # ignore import violations in init files
 "*test*" = [
   "D103",    # undocumented-public-function
   "B018",    # useless-expression
   "INP001",  # implicit-namespace-package
   "PLR0913", # too-many-arguments
+  "PLR2004", # use of magic number
+  "SLF001",  # accessing private member
 ]
 
 [tool.ruff.lint.pycodestyle]
