--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ docs = [
     "sphinx>=7.2.0",
     "sphinx-rtd-theme>=2.0.0",
     "sphinx-autodoc-typehints>=1.25.0",
+    "sphinxcontrib-mermaid>=1.0.0",
     "myst-parser>=2.0.0",
 ]
 
