--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -6,7 +6,7 @@ on:
       - main
     paths:
       - 'docs/**'
-      - 'nlp_utilities/**'
+      - 'conllu_tools/**'
       - '.github/workflows/docs.yml'
   workflow_dispatch:  # Allow manual trigger
 
