--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,9 @@ requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "latin-nlp-utilities"
-version = "1.2.0"
-description = "A set of convenience tools for Natural Language Processing work with Latin treebanks and annotated corpora."
+name = "conllu_tools"
+version = "1.3.0"
+description = "A set of convenience tools for Natural Language Processing work with CoNLL-U files, UD treebanks, and annotated corpora."
 readme = "README.md"
 authors = [{ name = "Gabe Pizzorno" }]
 license = "MIT"
@@ -60,14 +60,14 @@ docs = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/gpizzorno/latin-nlp-utilities/"
+Homepage = "https://github.com/gpizzorno/conllu_tools/"
 
 [tool.setuptools.packages.find]
 where = ["."]
-include = ["nlp_utilities*"]
+include = ["conllu_tools*"]
 
 [tool.setuptools.package-data]
-"nlp_utilities.data" = ["*.*"]
+"conllu_tools.data" = ["*.*"]
 
 # https://github.com/charliermarsh/ruff#configuration
 [tool.ruff]
